# bmw-sales-analytics

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yml
.streamlit/: config.toml
app/: data_access.py  streamlit_app.py  theme.py
app/assets/: style.css
data/raw/: README.md
docs/: api.md  index.md
docs/adr/: 0001-architecture-and-stack.md  0002-data-integrity.md  0003-api-augmentation.md  0004-deep-learning-justification.md  0005-devops-and-cicd.md  0006-signal-audit.md  0007-sql-and-quality-gates.md  0008-decision-under-uncertainty.md  0009-observability-and-docs.md
notebooks/: 01_executive_storytelling.ipynb
reports/: causal_analysis.md  conformal_prediction.md  data_integrity_report.md  dl_vs_ml.md  econometric_analysis.md  model_benchmark.md  model_metrics.json  predictive_capability.md  signal_audit.md  sql_insights.md
sql/queries/: electrification_by_region.sql  high_rate_by_region.sql  price_stats_by_model.sql  top_regions_by_volume.sql  yoy_volume.sql
src/bmw_sales/: config.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_apis.py  test_audit.py  test_capability.py  test_causal.py  (+12 more)
(+31 files in other folders)
